removed space and changed mail

--- a/index.html
+++ b/index.html
@@ -133,11 +133,6 @@
       </div>
     </section><!-- End About Section -->
 
-
-
-
-
-		
 		<!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
@@ -252,10 +247,6 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-
-
-
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
@@ -277,7 +268,7 @@
 										<div class="contact-row">
 											<i class="icofont-envelope"></i>
 											<h4>E-Mail:</h4>
-											<p>hello@dominik.pflegerl.me</p>
+											<p>dominik@pflegerl.me</p>
 										</div>
 									</a>
 								</li>
